ownership_move/ownership_string.log
   Compiling ownership_move v0.1.0 (/home/haha/Rust/ownership_move)
error[E0382]: borrow of moved value: `s1`
 --> src/main.rs:4:19
  |
2 |     let s1 = String::from("Hello");
  |         -- move occurs because `s1` has type `String`, which does not implement the `Copy` trait
3 |     let s2 = s1;//move
  |              -- value moved here
4 |     println!("{}",s1.len());
  |                   ^^ value borrowed here after move
  |
help: consider cloning the value if the performance cost is acceptable
  |
3 |     let s2 = s1.clone();//move
  |                ++++++++

For more information about this error, try `rustc --explain E0382`.
error: could not compile `ownership_move` (bin "ownership_move") due to 1 previous error
